<resources>
    <!--Global Strings-->
    <string name="user.id">displayname</string>
    <string name="app_name">MyApp</string>
    <string name="action_settings">Settings</string>
    <string name="esc">ESC</string>

    <!-- general strings for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="create_account_fragment_label">Create Account</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>

    <!--Login Page Strings-->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="login_page">Login</string>
    <string name="Login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="OR">OR YOU CAN</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Create Account Strings-->
    <string name="newUsernameLabel">New Username:</string>
    <string name="newPasswordLabel">New Password:</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="join_lobby">Join Lobby</string>
    <string name="add_friend">Add Friend</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>


    <!--Profile Strings-->
    <string name="high_score">High Score:</string>


    <!--Add Friends Strings-->
    <string name="enter_username">Enter Username</string>
    <string name="current_friends">Current Friends</string>
    <string name="current_friends_display_default">Why dont you have any friends?</string>
    <string name="friend_requests">Requests</string>

    <!--Join Game Strings-->
    <string name="join">Join</string>
    <string name="lobby_password">Lobby Password:</string>

    <!--Host Game/Lobby Strings-->
    <string name="host_lobby">Host Lobby</string>
    <string name="number_of_rounds">Number of Rounds:</string>

    <!--Lobby-->
    <string name="lobby_label">The Lobby</string>
    <string name="members_list">Members in the Lobby:</string>
    <string name="start_trivia">Start Trivia</string>

    <string name="leave_trivia">Leave Trivia</string>

    <!--temp-->
    <string name="json_object">json_object</string>
    <string name="json_array">json_array</string>

</resources>
