<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lambent"
    tools:context=".Lobby">

    <TextView
        android:id="@+id/lobby_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobby_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lobby_membersList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/lobby_membersList"
        android:layout_width="335dp"
        android:layout_height="378dp"
        android:layout_marginBottom="116dp"
        android:text="@string/members_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lobby_ESC"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_marginBottom="32dp"
        android:background="@color/PASTEL_ORANGE"
        android:text="@string/esc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lobby_startTrivia"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_membersList"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/lobby_startTrivia"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Cerulean"
        android:text="@string/start_trivia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_membersList"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>