<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lambent"
    tools:context=".AddFriend">

    <TextView
        android:id="@+id/addFriend_addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_friend"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addFriend_ESC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/esc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addFriend_plainText"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_username"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend_addFriend" />

    <TextView
        android:id="@+id/addFriend_CurrentFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="8dp"
        android:text="@string/current_friends"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addFriend_currentFriendsDisplay"
        app:layout_constraintEnd_toStartOf="@+id/addFriends_requests"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend_search"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addFriend_currentFriendsDisplay"
        android:layout_width="161dp"
        android:layout_height="295dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="32dp"
        android:text="@string/current_friends_display_default"
        app:layout_constraintBottom_toTopOf="@+id/addFriend_ESC"
        app:layout_constraintEnd_toStartOf="@+id/addFriends_friendRequestDisplay"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addFriend_search"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:text="@string/add_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend_plainText" />

    <TextView
        android:id="@+id/addFriends_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/friend_requests"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addFriends_friendRequestDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend_search"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addFriends_friendRequestDisplay"
        android:layout_width="153dp"
        android:layout_height="296dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="108dp"
        android:text="friend requests, errors, debugging"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>