<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CURIOUS_BLUE2"
    tools:context=".Profile">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-38dp" />

    <Button
        android:id="@+id/profile_esc"
        android:layout_width="153dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:background="@color/PASTEL_ORANGE"
        android:text="@string/esc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profile_displayname"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:text="@string/user.id"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_textbox"
        android:layout_width="349dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:text="roundtrip returned text goes here"
        app:layout_constraintBottom_toTopOf="@+id/profile_esc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_json_object"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profile_json_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/json_object"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_high_score_value" />

    <TextView
        android:id="@+id/profile_id"
        android:layout_width="96dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="User ID No."
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_displayname" />

    <TextView
        android:id="@+id/profile_label_high_score"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/profile_high_score_value"
        android:layout_width="95dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:text="nothing"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_label_high_score" />

</androidx.constraintlayout.widget.ConstraintLayout>
